--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h3>High School Diploma</h3>
     <p>Brentwood High School - Brentwood, NY</p>
     <p></p>
-    <h3>Some college in Computer Information and Technology</h3>
+    <h3>Computer Information and Technology</h3>
     <p>Suffolk County Community College - Brentwood, NY</p>
     <p>September 2019 - Present</p>
     <hr>
